have some bugs need to be fixed.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -21,5 +21,25 @@
                 }
             ]
         }
+    ],
+    "setupCommands": [
+        {
+            "description": "Enable pretty-printing for gdb",
+            "text": "-enable-pretty-printing",
+            "ignoreFailures": true
+        },
+        {
+            // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
+            "description": "Fork follows Child process",
+            "text": "set follow-fork-mode child",
+            "ignoreFailures": true
+        },
+        {
+            // https://sourceware.org/gdb/onlinedocs/gdb/Forks.html
+            "description": "Fork will keep the other process attached to debugger",
+            "text": "set detach-on-fork off",
+            "ignoreFailures": true
+        }
     ]
+
 }
